<resources>
    <string name="app_name">Barcode Scanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_off">Flash Off</string>
    <string name="sheet_setting">Sheet Setting</string>
    <string name="delete_all">Delete All</string>
    <string name="empty_string" />
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://f-lab-edu.github.io/barcode-scanner/privacy-policy.html</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="sheet_setting_guide_url">https://www.notion.so/Barcode-Scanner-Sheet-Configuration-Guide-2219d3557fe780acbb27e0c4dde0dbe2?source=copy_link</string>
    <string name="save">save</string>

    <!-- Hints -->
    <string name="edit_file_id_hint">Example: 1sOgrFQDhR6BaCVWFCE71swOdYIraF7uY3cIEIcamqEw</string>
    <string name="edit_sheets_name_hint">Example: Product List</string>
    <string name="edit_field_count_hint">Example: 4</string>
    <string name="edit_table_cell_hint">Example: B2</string>
    <string name="edit_barcode_column_hint">Example: D</string>

    <!-- Labels -->
    <string name="text_file_id_string">Sheet File ID</string>
    <string name="text_sheets_name_string">Sheet Name</string>
    <string name="text_field_count_string">Number of Columns</string>
    <string name="text_table_cell_string">Start Cell</string>
    <string name="text_barcode_column_string">Barcode Column</string>

    <!-- Buttons -->
    <string name="cancel_button">CANCEL</string>
    <string name="sheet_button">SHEET</string>
    <string name="url_button">URL</string>
    <string name="copy_button">COPY</string>
    <string name="delete_button">DELETE</string>

    <!-- Error Messages -->
    <string name="fail_copy_msg">Failed to copy</string>
    <string name="fail_open_url">Failed to open URL</string>
    <string name="failed_find_data">Data not found</string>
    <string name="flash_error_msg">device does not have flash</string>
    <string name="setting_page_floating_button_description">go setting help page</string>

</resources>