<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="48dp"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/format_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Code 128" />

        <TextView
            android:id="@+id/value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="S0022542419726" />

        <Button
            android:id="@+id/search_sheet_button"
            style="@style/DialogButtonStyle"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sheet_button"
            app:layout_constraintBottom_toTopOf="@id/copy_button"
            app:layout_constraintEnd_toStartOf="@+id/share_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/share_button"
            style="@style/DialogButtonStyle"
            android:layout_marginBottom="8dp"
            android:text="@string/share_button"
            app:layout_constraintBottom_toTopOf="@id/copy_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_sheet_button" />

        <Button
            android:id="@+id/copy_button"
            style="@style/DialogButtonStyle"
            android:layout_marginEnd="8dp"
            android:text="@string/copy_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/DialogButtonStyle"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/copy_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>